--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,12 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: test -z
-        run: test -z $(go fmt ./...)
 
       - name: go fmt
-        run: go fmt ./...
+        run: test -z $(go fmt ./...)
+
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1
 
 
 
