--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,3 +22,15 @@ jobs:
       - name: buildprod.sh
         run: ./scripts/buildprod.sh
 
+      - name: gcloud authentication
+	uses: google-github-actions/auth@v2
+	with:
+	  credentials_json: ${{ secrets.actions/GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: notely-487816
+
+      - name: gcloud builds submit
+	run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-487816/notely-ar-repo/notely:latest .
