Google cloud docker build 2

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
       - name: gcloud authentication
 	uses: google-github-actions/auth@v2
 	with:
-	  credentials_json: ${{ secrets.actions/GCP_CREDENTIALS }}
+	  credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
